--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -16,16 +16,21 @@ form {
     border-radius: 4px;
   }
   
-  button {
-    padding: 10px;
-    border: none;
-    border-radius: 4px;
-    background-color: #4caf50;
-    color: white;
-    cursor: pointer;
-  }
-  
-  button:hover {
-    background-color: #45a049;
-  }
+ 
+.button {
+  background-color: rgb(230, 226, 226);
+  color: rgb(37, 37, 37); 
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.button:hover {
+  background-color: #cccccc; 
+}
+
+.button:active {
+  background-color: darkgrey; 
+}
   
